# trout-tracker-wa-backend

./: .env  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING  CONTRIBUTING.md  Docker-compose.yaml  Dockerfile  README.md  backup_data.sql  backup_data.txt  docker-compose.yml  fargate-rds-secrets.yaml  main.py  pyproject.toml  requirements.txt  sample.env  scraper.py  scraper.yaml  vercel.json  wsgi.py
.github/ISSUE_TEMPLATE/: issue--update-screenshot.md
.github/workflows/: cron.yaml  deploy-to-ecr.yml  python-app.yml  python-tests.yml
api/: .gitignore  Dockerfile  README.md  database.py  index.py  main.py  requirements.txt  wsgi.py
api/templates/: base.html  index.html
aws_config/: configure-aws-credentials-latest.yml  fargate-rds-secrets.yaml  full-api-creation.yaml
back-end/: requirements.txt  scraper.py
back-end/tests/: test_scraper.py
back_end/: README.md  backup_data.sql  backup_data.txt  sample.env  scraper.py
data/: backup_data.txt  database.py  models.py  sqlite.db
data_base/: database.py
front-end/: .gitignore  data_tables.py  main.py  requirements.txt
front_end/: README.md  data_base.py  data_tables.py  database.py  main.py  map_and_charts.py  requirements.txt  sample.env  sqlite.db  wsgi.py
templates/: Stocked-Lakes.csv  base.html  future_stocking_plans.csv  index.html  map.html  map_full_screen.html
tests/: test_geocoder.py  test_scraper.py  tests.py
web_scraper/: Dockerfile  Makefile  README.md  backup_data.sql  backup_data.txt  lake_names.txt  pyproject.toml  requirements.txt  scraper.py
web_scraper/tests/: test_scraper.py
(+14 files in other folders)
