[tool.poetry]
name = "Trout Tracker WA"
version = "0.2.0"
description = "A Flask Web App used for displaying the most recent lakes that were stocked with trout in Washington State on an interactive map"
authors = ["Thomas-Basham <bashamtg@gmail.com"]

[tool.poetry.dependencies]
python = "^3.9.13"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
